--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ click==8.1.3
 colorama==0.4.5
 et-xmlfile==1.1.0
 Flask==2.2.0
+gunicorn==20.1.0
 idna==3.3
 importlib-metadata==4.12.0
 itsdangerous==2.1.2
