--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-app = "morphology-etymology-analyzer"
+app = "morphology-etymology-api"
 primary_region = "sea"
 
 [build]
@@ -13,3 +13,4 @@ primary_region = "sea"
   auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 0
+  processes = ["app"]
